--- a/css/main.css
+++ b/css/main.css
@@ -18,14 +18,14 @@ header {
 h1 {
   font-family: "Bevan", cursive;
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 2rem;
   display: block;
   margin: .3em;
 }
 
 a {
   color: #fff;
-  font-size: .8rem;
+  font-size: 1.125rem;
   font-weight: normal;
   text-decoration: none;
 }
@@ -51,5 +51,5 @@ a:hover {
 
 ol {
   text-decoration: none;
-  list-style: none;
+  list-style-type: none;
 }
