--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,10 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  background-color: #dbd6cf;
+}
+
 header {
   background-color: #79756f;
   border: 3px solid #595652;
@@ -16,7 +20,7 @@ header {
 }
 
 h1 {
-  font-family: "Bevan", cursive;
+  font-family: 'Bevan', cursive;
   color: #fff;
   font-size: 2rem;
   display: block;
@@ -40,7 +44,7 @@ nav li {
   display: inline-block;
   text-align: center;
   background-color: #713837;
-  padding: .5em .75em;
+  padding: .5em .6em;
   margin: .3em;
   border-radius: 10px;
 }
