--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ header {
 }
 
 h1 {
-  font-family: "Bevan", cursive;
+  font-family: "Bevan", serif;
   color: #fff;
   font-size: 2rem;
   display: block;
@@ -29,14 +29,14 @@ h1 {
 
 a {
   color: #fff;
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: normal;
   text-decoration: none;
 }
 
 nav a {
   display: inline-block;
-  padding: .5em .75em;
+  padding: .5em .5em;
   text-align: center;
 }
 
@@ -44,13 +44,13 @@ nav li {
   display: inline-block;
   text-align: center;
   background-color: #713837;
-  padding: .5em .6em;
+  padding: .5em .5em;
   margin: .3em;
   border-radius: 10px;
 }
 
-a:hover {
-  color: #f33;
+nav li a:hover {
+  background-color: #f33;
 }
 
 ul {
