--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,10 @@ html {
 
 body {
   background-color: #dbd6cf;
-  margin-top: .3em;
+  margin-bottom: .3em;
+  margin-top: 0em;
+  margin-left: 0em;
+  margin-right: 0em;
 }
 
 header {
@@ -45,12 +48,12 @@ nav li {
   display: inline-block;
   text-align: center;
   background-color: #713837;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 nav li a:hover {
   background-color: #f33;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 ul {
