--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,8 @@ html {
 
 body {
   background-color: #dbd6cf;
-  margin: 0em;
+  display: block;
+  margin: 0em 0em 3em;
 }
 
 header {
@@ -19,6 +20,7 @@ header {
   border-top: 3px solid #595652;
   border-bottom: 3px solid #595652;
   text-align: center;
+  display: block;
 }
 
 h1 {
