Take out margins

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ header {
   border-bottom: 3px solid #595652;
   text-align: center;
   display: block;
+  margin: 0;
 }
 
 h1 {
@@ -28,6 +29,7 @@ h1 {
   color: #fff;
   font-size: 2rem;
   display: block;
+  margin: 0;
 }
 
 a {
